# mctui

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
collector/: .env  Cargo.toml
collector/migrations/: 20250820140427_create_events_table.sql  20250820155250_set_created_at_default.sql
collector/src/: main.rs  models.rs
mc-plugin/mc-plugin/: dependency-reduced-pom.xml  pom.xml
mc-plugin/mc-plugin/src/main/java/com/jarrowsmith123/: Main.java  MctuiPlugin.java
mc-plugin/mc-plugin/src/main/java/com/jarrowsmith123/listeners/: PlayerListener.java
mc-plugin/mc-plugin/src/main/java/com/jarrowsmith123/network/: GameEvent.java  HttpManager.java  PlayerLocation.java
mc-plugin/mc-plugin/src/main/resources/: plugin.yml
